made load button functional and moved it into the ajax call so it would load more gifs when you press the button. started a click function for animating the gifs when you click on them. gave the load button a border and css hover function

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
     width: 100%;
 }
 
-/* .result {
-    
-} */
+.result {
+    /* height: 75vh; */
+    /* overflow: scroll; */
+}
 
 .load {
     width: 100%;
-    border: #f1f8ff solid 2px;
+    border-style: solid 2px;
     border-radius: 25px;
 }
 
