--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,18 @@
     width: 100%;
     border-style: solid 2px;
     border-radius: 25px;
+    margin-top: -1vh;
 }
 
 .load:hover {
     background-color: #f1f8ff;
+}
+
+img {
+    opacity: 1;
+    max-height: 200px;
+}
+
+img:hover {
+    opacity: .5
 }
