removed swiper containers until they can be properly implemented. fixed issue in js where each time a new button was pressed it would assign the image 0-3 instead of the next numbers in the loop

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
 }
 
 .load {
-    width: 100%;
-    border-style: solid 2px;
+    width: 75vw;
     border-radius: 25px;
     margin-top: -1vh;
+    bottom: 1vh;
 }
 
 .load:hover {
