--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,27 @@
 .buttons {
     width: 100%;
+    margin-top: 10px;
 }
 
-.result {
-    /* height: 75vh; */
-    /* overflow: scroll; */
+.fas {
+    left: 50%;
+    /* transform: translateX(-50%) */
+}
+
+#toggler {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 0;
+}
+
+#headingOne {
+    height: 50px;
 }
 
 .load {
     width: 75vw;
     border-radius: 25px;
-    margin-top: -1vh;
     bottom: 1vh;
 }
 
@@ -25,4 +36,27 @@ img {
 
 img:hover {
     opacity: .5
+}
+
+.rating {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: -30px;
+}
+
+.css-image {
+    margin-bottom: 30px
+}
+.js-gif-click {
+    position: relative;
+}
+
+.result {
+    margin-top: 10px;
+}
+
+.input-group {
+    width: 75%;
+    left: 12.5%;
 }
