changed margin on css image class

--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,12 @@ img:hover {
 }
 
 .css-image {
-    margin-bottom: 30px
+    margin-bottom: 10px
 }
+
 .js-gif-click {
     position: relative;
+    /* justify-content: center; */
 }
 
 .result {
