--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,6 @@
-body {
-    /* background-color: #0abe28cc; */
-}
 .buttons {
     width: 100%;
     margin-top: 10px;
-}
-
-.fas {
-    left: 50%;
-    /* transform: translateX(-50%) */
 }
 
 #toggler {
@@ -16,6 +8,7 @@ body {
     width: 100%;
     height: 50px;
     top: 0;
+    text-decoration: none;
 }
 
 #headingOne {
@@ -52,7 +45,7 @@ img:hover {
 }
 
 .css-image {
-    margin-bottom: 10px
+    margin: 0 5px 30px;
 }
 
 .js-gif-click {
